fix: solved problem with video on small screen

--- a/Frontend/src/app/pages/videos/videos.component.scss
+++ b/Frontend/src/app/pages/videos/videos.component.scss
@@ -29,7 +29,7 @@
     }
 }
 
-@media screen and ((max-width: 500px) or (max-height: 400px)) {
+@media screen and ((max-width: 500px) or (max-height: 450px)) {
     .video {
         width: 300px;
     }
